add step for delete project

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
 loginUrl=https://app.qase.io/login
-user=alesia.yarashenka@gmail.com
-password=0608198128042006zZ
+user=
+password=
 projectListUrl =https://app.qase.io/projects
