--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,4 @@
 loginUrl=https://app.qase.io/login
 user=alesia.yarashenka@gmail.com
 password=0608198128042006zZ
+projectListUrl =https://app.qase.io/projects
